--- a/src/components/Ui/Button/style/sizes.scss
+++ b/src/components/Ui/Button/style/sizes.scss
@@ -1,22 +1,23 @@
-@use 'sass:math';
-@use './src/style/layout/module' as layout;
+@use 'sass:map';
+@use './src/style/sizes/module' as sizes;
 
-&._size_lg &__body {
-	padding: layout.$gap * 0.75 layout.$gap * 1.5;
-}
+@each $size, $value in sizes.$ui {
+	&._size_#{$size} &__body {
+		border-width: map.get($value, border);
+		padding: map.get($value, padding);
+	}
 
-&._size_md &__body {
-	padding: math.div(layout.$gap, 2) math.div(layout.$gap, 1.5);
-}
+	&._size_#{$size}._square &__body {
+		width: map.get($value, size);
+		height: map.get($value, size);
+	}
 
-&._size_sm &__body {
-	padding: math.div(layout.$gap, 3.5) math.div(layout.$gap, 2);
-}
+	&._size_#{$size} &__caption {
+		font-size: map.get($value, font-size);
+		line-height: 1;
+	}
 
-&._size_sm &__caption {
-	font-size: math.div(layout.$gap, 3.5);
-}
-
-&._size_sm &__icon {
-	width: math.div(layout.$gap, 2.5);
+	&._size_#{$size} &__icon {
+		height: map.get($value, font-size);
+	}
 }
