--- a/src/style/fonts/module.scss
+++ b/src/style/fonts/module.scss
@@ -1,40 +1,40 @@
 @font-face {
 	font-family: 'Roboto';
-	src: url('../../assets/fonts/Roboto-Regular.woff');
-	src: url('../../assets/fonts/Roboto-Regular.woff2');
+	src: url('/src/assets/fonts/Roboto-Regular.woff');
+	src: url('/src/assets/fonts/Roboto-Regular.woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('../../assets/fonts/Roboto-Bold.woff');
-	src: url('../../assets/fonts/Roboto-Bold.woff2');
+	src: url('/src/assets/fonts/Roboto-Bold.woff');
+	src: url('/src/assets/fonts/Roboto-Bold.woff2');
 	font-weight: 600;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('../../assets/fonts/Roboto-Light.woff');
-	src: url('../../assets/fonts/Roboto-Light.woff2');
+	src: url('/src/assets/fonts/Roboto-Light.woff');
+	src: url('/src/assets/fonts/Roboto-Light.woff2');
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: 'RobotoSlab';
-	src: url('../../assets/fonts/RobotoSlab-Regular.woff');
-	src: url('../../assets/fonts/RobotoSlab-Regular.woff2');
+	src: url('/src/assets/fonts/RobotoSlab-Regular.woff');
+	src: url('/src/assets/fonts/RobotoSlab-Regular.woff2');
 }
 
 @font-face {
 	font-family: 'RobotoSlab';
-	src: url('../../assets/fonts/RobotoSlab-Bold.woff');
-	src: url('../../assets/fonts/RobotoSlab-Bold.woff2');
+	src: url('/src/assets/fonts/RobotoSlab-Bold.woff');
+	src: url('/src/assets/fonts/RobotoSlab-Bold.woff2');
 	font-weight: 600;
 }
 
 @font-face {
 	font-family: 'RobotoSlab';
-	src: url('../../assets/fonts/RobotoSlab-Light.woff');
-	src: url('../../assets/fonts/RobotoSlab-Light.woff2');
+	src: url('/src/assets/fonts/RobotoSlab-Light.woff');
+	src: url('/src/assets/fonts/RobotoSlab-Light.woff2');
 	font-weight: 300;
 }
 
