--- a/src/components/Grid/Row.scss
+++ b/src/components/Grid/Row.scss
@@ -14,6 +14,8 @@
 		$variants: (
 			start: flex-start,
 			end: flex-end,
+			between: space-between,
+			around: space-around,
 			center: center,
 			stretch: stretch,
 		);
