--- a/src/components/Ui/Button/style/templates.scss
+++ b/src/components/Ui/Button/style/templates.scss
@@ -2,6 +2,7 @@
 	margin: 0;
 }
 
-&._template_text:hover &__caption {
+&._template_text:hover &__caption,
+&._template_text._hover &__caption{
 	text-decoration: underline;
 }
