--- a/src/style/sizes/module.scss
+++ b/src/style/sizes/module.scss
@@ -5,21 +5,24 @@ $ui: (
 	sm: (
 		size: math.div(layout.$gap, 2.5) + (math.div(layout.$gap, 3) * 2),
 		border: 1px,
-		padding: math.div(layout.$gap, 3) math.div(layout.$gap, 2),
+		padding-h: math.div(layout.$gap, 2),
+		padding-v: math.div(layout.$gap, 3),
 		font-size: math.div(layout.$gap, 2.5),
 		line-height: 1,
 	),
 	md: (
 		size: math.div(layout.$gap, 2) + (math.div(layout.$gap, 2.5) * 2),
 		border: 1px,
-		padding: math.div(layout.$gap, 2.5) math.div(layout.$gap, 1.5),
+		padding-h: math.div(layout.$gap, 1.5),
+		padding-v: math.div(layout.$gap, 2.5),
 		font-size: math.div(layout.$gap, 2),
 		line-height: 1,
 	),
 	lg: (
 		size: math.div(layout.$gap, 1.5) + (math.div(layout.$gap, 2) * 2),
 		border: 1px,
-		padding: math.div(layout.$gap, 2) layout.$gap,
+		padding-h: layout.$gap,
+		padding-v: math.div(layout.$gap, 2),
 		font-size: math.div(layout.$gap, 1.5),
 		line-height: 1,
 	),
